samples/_failures_safe/1761074081_b2fa3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60cfae57.c: In function ‘main’:
./samples/SAFE/__tmp_60cfae57.c:156:5: error: expected expression at end of input
  156 |     if (len > 0 && input[len - 1] ==
      |     ^~
./samples/SAFE/__tmp_60cfae57.c:156:5: error: expected declaration or statement at end of input
